refactor: auth router
