# threads-api/swagger/paths.yaml
@@ -30,6 +30,8 @@ externalDocs:
 servers:
   - url: http://localhost:4000
 tags:
+  - name: auth
+    description: Threads replica auth APIs 
   - name: users
     description: Threads replica users APIs 
   - name: posts
@@ -42,10 +44,10 @@ tags:
     description: Threads replica comments API
 
 paths:
-  /users/register:
+  /auth/register:
     post:
       tags:
-        - users
+        - auth
       summary: Register
       description: 'Register Threads Replica'
       operationId: register
@@ -71,10 +73,10 @@ paths:
                     $ref: '#/components/schemas/SuccessAuthentication'
         '422':
           description: Invalid input
-  /users/login:
+  /auth/login:
     post:
       tags:
-        - users
+        - auth
       summary: Login
       description: 'Login to Threads Replica'
       operationId: login
@@ -100,10 +102,10 @@ paths:
                     $ref: '#/components/schemas/SuccessAuthentication'
         '422':
           description: Invalid or missing input fields
-  /users/logout:
+  /auth/logout:
     post:
       tags:
-        - users
+        - auth
       summary: Logout a user
       description: Logs out a user by invalidating the provided refresh token.
       security:
@@ -145,10 +147,10 @@ paths:
                   error:
                     type: string
                     example: Token has expired or is invalid
-  /users/refresh-token:
+  /auth/refresh-token:
     post:
       tags:
-        - users
+        - auth
       summary: Refresh the access token
       description: Generates a new access token using a valid refresh token.
       requestBody:
@@ -197,6 +199,186 @@ paths:
                   error:
                     type: string
                     example: Unauthorized - Token expired or invalid
+  /auth/forgot-password:
+    post:
+      tags:
+        - auth
+      summary: Forgot password
+      description: 'Forgot password'
+      operationId: forgotPassword
+      requestBody: 
+        description: Forgot password information
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ForgotPasswordBody'
+      responses:
+        default:
+          description: Forgot password Information
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                   message:
+                    type: string
+                    example: Check email to reset password
+        '422':
+          description: Invalid or missing input fields
+  /auth/reset-password:
+    post:
+      tags:
+        - auth
+      summary: Reset user password
+      description: Allows a user to reset their password using a valid forgot password token.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ResetPasswordBody'
+      responses:
+        '200':
+          description: Password reset successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Password reset successfully
+        '422':
+          description: Invalid or missing input fields
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: Passwords do not match or token is invalid
+        '401':
+          description: Unauthorized - Token expired or invalid
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: Token has expired or is invalid
+  /auth/change-password:
+    post:
+      tags:
+        - auth
+      summary: Change user password
+      description: Allows a user to change their password by providing the old password and a new one.
+      security:
+        - BearerAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ChangePasswordBody'
+      responses:
+        '200':
+          description: Password changed successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Password changed successfully
+        '422':
+          description: Invalid or missing input fields
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: New passwords do not match or old password is incorrect
+  /auth/verify-email:
+    post:
+      tags:
+        - auth
+      summary: Verify email address
+      description: Verifies a user's email using a provided token.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                verify_email_token:
+                  type: string
+                  description: The token used to verify the user's email.
+                  example: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyX2lkIjoiNjZiYTVkYTU1MWUwYzM0NGQxZmMwMjY5IiwidmVyaWZ5IjowLCJ0b2tlbl90eXBlIjoyLCJpYXQiOjE3MzUwNTQ3OTIsImV4cCI6MTczNTY1OTU5Mn0.uyG13czqCyeZ24ghcLVzsaz73vmbAXaVHYrkN-Y-Gv8"
+      responses:
+        '200':
+          description: Email verification successful
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "Email verified successfully."
+        '400':
+          description: Invalid or expired token
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: "Invalid or expired verification token."
+  /auth/verify-forgot-password:
+    post:
+      tags:
+        - auth
+      summary: Verify forgot password token
+      description: Verifies the token for resetting the password.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                forgot_password_token:
+                  type: string
+                  description: The token used to verify the forgot password request.
+                  example: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyX2lkIjoiNjZiYTVkYTU1MWUwYzM0NGQxZmMwMjY5IiwidmVyaWZ5IjowLCJ0b2tlbl90eXBlIjoyLCJpYXQiOjE3Mjg0OTI4MjUsImV4cCI6MTcyOTA5NzYyNX0.d75eIKO69vqjoO1aWPLXGqiWyIGzMruLGZbtKN_dozE"
+      responses:
+        '200':
+          description: Forgot password token verified successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "Forgot password token verified successfully."
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: "Invalid signatured or JWT expired."
   /users/me:
     get:
       tags:
@@ -302,186 +484,6 @@ paths:
                   error:
                     type: string
                     example: Invalid user ID format
-  /users/forgot-password:
-    post:
-      tags:
-        - users
-      summary: Forgot password
-      description: 'Forgot password'
-      operationId: forgotPassword
-      requestBody: 
-        description: Forgot password information
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/ForgotPasswordBody'
-      responses:
-        default:
-          description: Forgot password Information
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                   message:
-                    type: string
-                    example: Check email to reset password
-        '422':
-          description: Invalid or missing input fields
-  /users/reset-password:
-    post:
-      tags:
-        - users
-      summary: Reset user password
-      description: Allows a user to reset their password using a valid forgot password token.
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/ResetPasswordBody'
-      responses:
-        '200':
-          description: Password reset successfully
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-                    example: Password reset successfully
-        '422':
-          description: Invalid or missing input fields
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  error:
-                    type: string
-                    example: Passwords do not match or token is invalid
-        '401':
-          description: Unauthorized - Token expired or invalid
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  error:
-                    type: string
-                    example: Token has expired or is invalid
-  /users/change-password:
-    post:
-      tags:
-        - users
-      summary: Change user password
-      description: Allows a user to change their password by providing the old password and a new one.
-      security:
-        - BearerAuth: []
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/ChangePasswordBody'
-      responses:
-        '200':
-          description: Password changed successfully
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-                    example: Password changed successfully
-        '422':
-          description: Invalid or missing input fields
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  error:
-                    type: string
-                    example: New passwords do not match or old password is incorrect
-  /users/verify-email:
-    post:
-      tags:
-        - users
-      summary: Verify email address
-      description: Verifies a user's email using a provided token.
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                verify_email_token:
-                  type: string
-                  description: The token used to verify the user's email.
-                  example: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyX2lkIjoiNjZiYTVkYTU1MWUwYzM0NGQxZmMwMjY5IiwidmVyaWZ5IjowLCJ0b2tlbl90eXBlIjoyLCJpYXQiOjE3MzUwNTQ3OTIsImV4cCI6MTczNTY1OTU5Mn0.uyG13czqCyeZ24ghcLVzsaz73vmbAXaVHYrkN-Y-Gv8"
-      responses:
-        '200':
-          description: Email verification successful
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-                    example: "Email verified successfully."
-        '400':
-          description: Invalid or expired token
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  error:
-                    type: string
-                    example: "Invalid or expired verification token."
-  /users/verify-forgot-password:
-    post:
-      tags:
-        - users
-      summary: Verify forgot password token
-      description: Verifies the token for resetting the password.
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                forgot_password_token:
-                  type: string
-                  description: The token used to verify the forgot password request.
-                  example: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyX2lkIjoiNjZiYTVkYTU1MWUwYzM0NGQxZmMwMjY5IiwidmVyaWZ5IjowLCJ0b2tlbl90eXBlIjoyLCJpYXQiOjE3Mjg0OTI4MjUsImV4cCI6MTcyOTA5NzYyNX0.d75eIKO69vqjoO1aWPLXGqiWyIGzMruLGZbtKN_dozE"
-      responses:
-        '200':
-          description: Forgot password token verified successfully
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-                    example: "Forgot password token verified successfully."
-        '401':
-          description: Unauthorized
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  error:
-                    type: string
-                    example: "Invalid signatured or JWT expired."
   /users/follow:
     post:
       tags:
